--- a/references.bib
+++ b/references.bib
@@ -552,7 +552,7 @@ Publisher: American Psychological Association},
 	number = {2-3},
 	urldate = {2021-10-05},
 	journal = {Sociological Methods \& Research},
-	author = {LITTLE, RODERICK J. A. and RUBIN, DONALD B.},
+	author = {Little, Roderick J. A. and Rubin, Donald B.},
 	month = nov,
 	year = {1989},
 	note = {01328 
