--- a/references.bib
+++ b/references.bib
@@ -552,7 +552,7 @@ Publisher: American Psychological Association},
 	number = {2-3},
 	urldate = {2021-10-05},
 	journal = {Sociological Methods \& Research},
-	author = {Little, Roderick J. A. and Rubin, Donald B.},
+	author = {Little, Roderick J. and Rubin, Donald B.},
 	month = nov,
 	year = {1989},
 	note = {01328 
@@ -631,7 +631,7 @@ Publisher: American Psychological Association},
 	file = {Full Text:/Users/shawes/Zotero/storage/E2Q3DR5J/2020-54836-001.html:text/html},
 }
 
-@article{littlefield20210603,
+@article{littlefield2021,
 	title = {Limitations of cross-lagged panel models in addiction research and alternative models: {An} empirical example using project {MATCH}.},
 	issn = {1939-1501},
 	shorttitle = {Limitations of cross-lagged panel models in addiction research and alternative models},
@@ -640,6 +640,7 @@ Publisher: American Psychological Association},
 	urldate = {2021-10-31},
 	journal = {Psychology of Addictive Behaviors},
 	author = {Littlefield, Andrew K. and King, Kevin M. and Acuff, Samuel F. and Foster, Katherine T. and Murphy, James G. and Witkiewitz, Katie},
+	year = {2021},
 	note = {00001 
 Publisher: US: American Psychological Association},
 	file = {Littlefield et al. - Limitations of cross-lagged panel models in addict.pdf:/Users/shawes/Zotero/storage/HUDI9E6R/Littlefield et al. - Limitations of cross-lagged panel models in addict.pdf:application/pdf;Snapshot:/Users/shawes/Zotero/storage/L92RTFBZ/2021-47508-001.html:text/html},
