--- a/TailwindTest.qmd
+++ b/TailwindTest.qmd
@@ -2,53 +2,28 @@
 title: "Tailwind Test Doc"
 editor: visual
 
-
 format:
   html:
     css: styles.css
 
-  
 ---
 <!-- tailwind cdn temp link -->
 <script src = "https://cdn.tailwindcss.com"></script>
 <!---->
 
-
+<div class="bg-gradient-to-r from-indigo-500 from-10% via-purple-500 via-30% to-pink-500 to-90% ...">
+  <!-- ... -->
+  xxxzzzzzxxx
+</div>
 
 <div class="bg-gradient-to-r from-indigo-500 from-10% via-purple-500 via-30% to-pink-500 to-90% ...">
   <!-- ... -->
-  xxxxxx
+  include contentzzzzzzz
 </div>
 
-xxxxxx
-
-<div class="bg-gradient-to-r from-indigo-500 from-10% via-purple-500 via-30% to-pink-500 to-90% ...">
+<div class="bg-gray-900">
   <!-- ... -->
   include content
 </div>
 
 
-:::{.text-xl .text-blue .rounded-lg .py-4 .px-2 .bg-gradient--to-r .from-green-700 .to-blue-900 .shadow-xl}
-
-Place Content here
-
-:::
-
-<p .bg-sky-900> 
-
-include content
-
-</p>
-
-
-xxxxx
-
-.bg-sky-900
-
-.bg-gradient--to-r
-
-.from-green-700
-
-.to-blue-900
-
-.shadow-xl
